# pyodide-minimal-reproduction

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml  update.yml
app/: eslint.config.js  package.json  pnpm-lock.yaml
app/src/: exec.py
