[project]
requires-python = ">=3.13"
dependencies = [
    "ruff~=0.14.5",
    "webtypy~=0.1.7",
    "micropip~=0.11.0",
    "pyodide-py==0.29.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
fmt = { composite = ["ruff check --fix --exit-zero", "ruff format"] }

[tool.black]
line-length = 200

[tool.ruff]
line-length = 200

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "TRY",  # tryceratops
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "RSE",  # flake8-raise
]
ignore = [
    "RUF200", # Failed to parse pyproject.toml: missing field `name`
    "F403",   # `... import *` used; unable to detect undefined names
    "F704",   # `await` statement outside of a function
]

[tool.pyright]
reportMissingModuleSource = false
reportWildcardImportFromLibrary = false
